--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="secondaryTextColor">#70ffffff</color>
     <color name="secondaryTextColor_light">#50ffffff</color>
     <color name="primaryIconColor">#ffffff</color>
+    <color name="surfaceColor">#323232</color>
     <color name="completionList_background">#373737</color>
     <color name="completionList_backgroundSelected">#505050</color>
     <color name="symbolInput_background">#000000</color>
@@ -19,7 +20,7 @@
     <color name="tabAction_background">#ffffff</color>
     <color name="tabAction_text">@color/primaryLightColor</color>
     <color name="tabAction_icon">#000000</color>
-    <color name="rippleHighlightColor">#50121212</color>
+    <color name="rippleHighlightColor">#85121212</color>
     <color name="log_warning">#FF7043</color>
     <color name="diagnostic_error">@color/secondaryDarkColor</color>
     <color name="diagnostic_warning">@color/log_warning</color>
