--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,147 +1,145 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="actionOverflowButtonStyle">@style/AppTheme.Toolbar.OverflowButton</item>
-        <item name="colorPrimary">@color/primaryColor</item>
-        <item name="colorPrimaryDark">@color/primaryDarkColor</item>
-        <item name="colorAccent">@color/secondaryColor</item>
-        <item name="colorButtonNormal">@color/secondaryColor</item>
-        <item name="colorControlNormal">@color/secondaryColor</item>
-        <item name="colorControlHighlight">@color/rippleHighlightColor</item>
-        <item name="fontFamily">@font/josefin_sans</item>
-        <item name="hintTextColor">@color/secondaryColor</item>
-        <item name="shapeAppearanceLargeComponent">@style/AppTheme.ShapeOverlay.Large</item>
-        <item name="chipStyle">@style/AppTheme.UIDesigner.WidgetGroupChip</item>
-        <item name="windowActionModeOverlay">true</item>
-        <item name="windowActionBarOverlay">true</item>
-        <item name="android:colorButtonNormal">@color/secondaryColor</item>
-        <item name="android:textColorSecondary">@color/secondaryTextColor</item>
-        <item name="android:windowBackground">@color/content_background</item>
-        <item name="android:fontFamily">@font/josefin_sans</item>
-    </style>
+  <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
+    <item name="actionOverflowButtonStyle">@style/AppTheme.Toolbar.OverflowButton</item>
+    <item name="colorPrimary">@color/primaryColor</item>
+    <item name="colorPrimaryDark">@color/primaryDarkColor</item>
+    <item name="colorAccent">@color/secondaryColor</item>
+    <item name="colorSurface">@color/surfaceColor</item>
+    <item name="colorButtonNormal">@color/secondaryColor</item>
+    <item name="colorControlNormal">@color/secondaryColor</item>
+    <item name="colorControlHighlight">@color/rippleHighlightColor</item>
+    <item name="fontFamily">@font/josefin_sans</item>
+    <item name="hintTextColor">@color/secondaryColor</item>
+    <item name="shapeAppearanceLargeComponent">@style/AppTheme.ShapeOverlay.Large</item>
+    <item name="chipStyle">@style/AppTheme.UIDesigner.WidgetGroupChip</item>
+    <item name="windowActionModeOverlay">true</item>
+    <item name="windowActionBarOverlay">true</item>
+    <item name="android:colorButtonNormal">@color/secondaryColor</item>
+    <item name="android:textColorSecondary">@color/secondaryTextColor</item>
+    <item name="android:windowBackground">@color/content_background</item>
+    <item name="android:fontFamily">@font/josefin_sans</item>
+  </style>
 
-    <style name="AppTheme.UIDesigner.WidgetGroupChip" parent="Widget.Material3.Chip.Filter">
-        <item name="chipIconTint">@color/primaryIconColor</item>
-        <item name="chipBackgroundColor">@color/primaryColor</item>
-        <item name="chipStrokeColor">@color/secondaryColor</item>
-        <item name="chipStrokeWidth">1dp</item>
-    </style>
+  <style name="AppTheme.UIDesigner.WidgetGroupChip" parent="Widget.Material3.Chip.Filter">
+    <item name="chipIconTint">@color/primaryIconColor</item>
+    <item name="chipBackgroundColor">@color/primaryColor</item>
+    <item name="chipStrokeColor">@color/secondaryColor</item>
+    <item name="chipStrokeWidth">1dp</item>
+  </style>
 
-    <style name="AppTheme.Toolbar.OverflowButton" parent="@style/Widget.AppCompat.ActionButton.Overflow">
-        <item name="android:tint">@color/secondaryColor</item>
-    </style>
+  <style name="AppTheme.Toolbar.OverflowButton" parent="@style/Widget.AppCompat.ActionButton.Overflow">
+    <item name="android:tint">@color/secondaryColor</item>
+  </style>
 
-    <style name="AppTheme.MaterialToggleButton" parent="">
-        <item name="colorPrimary">@color/secondaryColor</item>
-    </style>
+  <style name="AppTheme.MaterialToggleButton" parent="">
+    <item name="colorPrimary">@color/secondaryColor</item>
+  </style>
 
-    <style name="AppTheme.TabLayout.Title" parent="TextAppearance.Design.Tab">
-        <item name="textAllCaps">false</item>
-        <item name="android:textAllCaps">false</item>
-    </style>
+  <style name="AppTheme.TabLayout.Title" parent="TextAppearance.Design.Tab">
+    <item name="textAllCaps">false</item>
+    <item name="android:textAllCaps">false</item>
+  </style>
 
-    <style name="AppTheme.ProjectCreator.TextInput" parent="Widget.Material3.TextInputLayout.FilledBox.Dense">
-        <item name="colorAccent">@color/primaryTextColor</item>
-        <item name="android:textColorHint">@color/secondaryTextColor</item>
-        <item name="colorControlActivated">@color/secondaryTextColor_light</item>
-    </style>
+  <style name="AppTheme.ProjectCreator.TextInput" parent="Widget.Material3.TextInputLayout.FilledBox.Dense">
+    <item name="colorAccent">@color/primaryTextColor</item>
+    <item name="android:textColorHint">@color/secondaryTextColor</item>
+    <item name="colorControlActivated">@color/secondaryTextColor_light</item>
+  </style>
 
-    <style name="AppTheme.ShapeOverlay.Large" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSizeTopRight">16dp</item>
-        <item name="cornerSizeTopLeft">16dp</item>
-        <item name="cornerSizeBottomRight">0dp</item>
-        <item name="cornerSizeBottomLeft">0dp</item>
-    </style>
+  <style name="AppTheme.ShapeOverlay.Large" parent="">
+    <item name="cornerFamily">rounded</item>
+    <item name="cornerSizeTopRight">16dp</item>
+    <item name="cornerSizeTopLeft">16dp</item>
+    <item name="cornerSizeBottomRight">0dp</item>
+    <item name="cornerSizeBottomLeft">0dp</item>
+  </style>
 
-    <style name="AppTheme.ShapeAppearance.MainFragment.Logo" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">25dp</item>
-    </style>
+  <style name="AppTheme.ShapeAppearance.MainFragment.Logo" parent="">
+    <item name="cornerFamily">rounded</item>
+    <item name="cornerSize">25dp</item>
+  </style>
 
-    <!-- Alert Dialog -->
-    <style name="AppTheme.MaterialAlertDialog" parent="@style/ThemeOverlay.Material3.MaterialAlertDialog">
-        <item name="shapeAppearanceOverlay">@style/MaterialDialog.ShapeAppearance</item>
-        <item name="materialAlertDialogTitleTextStyle">@style/MaterialDialog.Title.Text</item>
-        <item name="materialAlertDialogBodyTextStyle">@style/MaterialDialog.Body.Text</item>
-        <item name="buttonBarPositiveButtonStyle">@style/MaterialAlertDialog.PositiveButtonStyle
-        </item>
-        <item name="buttonBarNegativeButtonStyle">@style/MaterialAlertDialog.NegativeButtonStyle
-        </item>
-        <item name="buttonBarNeutralButtonStyle">@style/MaterialAlertDialog.NeutralButtonStyle
-        </item>
-        <item name="android:windowEnterAnimation">@animator/dialog_in</item>
-        <item name="android:windowExitAnimation">@animator/dialog_out</item>
-    </style>
+  <!-- Alert Dialog -->
+  <style name="AppTheme.MaterialAlertDialog" parent="@style/ThemeOverlay.Material3.MaterialAlertDialog">
+    <item name="shapeAppearanceOverlay">@style/MaterialDialog.ShapeAppearance</item>
+    <item name="materialAlertDialogTitleTextStyle">@style/MaterialDialog.Title.Text</item>
+    <item name="materialAlertDialogBodyTextStyle">@style/MaterialDialog.Body.Text</item>
+    <item name="buttonBarPositiveButtonStyle">@style/MaterialAlertDialog.PositiveButtonStyle</item>
+    <item name="buttonBarNegativeButtonStyle">@style/MaterialAlertDialog.NegativeButtonStyle</item>
+    <item name="buttonBarNeutralButtonStyle">@style/MaterialAlertDialog.NeutralButtonStyle</item>
+    <item name="android:windowEnterAnimation">@animator/dialog_in</item>
+    <item name="android:windowExitAnimation">@animator/dialog_out</item>
+  </style>
 
-    <style name="MaterialDialog.ShapeAppearance" parent="">
-        <item name="cornerSize">10dp</item>
-    </style>
+  <style name="MaterialDialog.ShapeAppearance" parent="">
+    <item name="cornerSize">28dp</item>
+  </style>
 
-    <style name="MaterialDialog.Title.Text" parent="@style/MaterialAlertDialog.Material3.Title.Text">
-        <item name="android:textColor">@color/primaryTextColor</item>
-        <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/josefin_sans</item>
-    </style>
+  <style name="MaterialDialog.Title.Text" parent="@style/MaterialAlertDialog.Material3.Title.Text">
+    <item name="android:textColor">@color/primaryTextColor</item>
+    <item name="android:textStyle">bold</item>
+    <item name="fontFamily">@font/josefin_sans</item>
+  </style>
 
-    <style name="MaterialDialog.Body.Text" parent="@style/MaterialAlertDialog.Material3.Body.Text">
-        <item name="android:textColor">@color/primaryTextColor</item>
-        <item name="fontFamily">@font/josefin_sans</item>
-    </style>
+  <style name="MaterialDialog.Body.Text" parent="@style/MaterialAlertDialog.Material3.Body.Text">
+    <item name="android:textColor">@color/primaryTextColor</item>
+    <item name="fontFamily">@font/josefin_sans</item>
+  </style>
 
-    <style name="MaterialAlertDialog.PositiveButtonStyle" parent="@style/Widget.Material3.Button.TextButton.Dialog">
-        <item name="android:textColor">@color/secondaryColor</item>
-        <item name="backgroundTint">@android:color/transparent</item>
-        <item name="fontFamily">@font/josefin_sans</item>
-    </style>
+  <style name="MaterialAlertDialog.PositiveButtonStyle" parent="@style/Widget.Material3.Button.TextButton.Dialog">
+    <item name="android:textColor">@color/secondaryColor</item>
+    <item name="backgroundTint">@android:color/transparent</item>
+    <item name="fontFamily">@font/josefin_sans</item>
+  </style>
 
-    <style name="MaterialAlertDialog.NegativeButtonStyle" parent="@style/Widget.Material3.Button.TextButton.Dialog">
-        <item name="android:textColor">@color/secondaryColor</item>
-        <item name="backgroundTint">@android:color/transparent</item>
-        <item name="fontFamily">@font/josefin_sans</item>
-    </style>
+  <style name="MaterialAlertDialog.NegativeButtonStyle" parent="@style/Widget.Material3.Button.TextButton.Dialog">
+    <item name="android:textColor">@color/secondaryColor</item>
+    <item name="backgroundTint">@android:color/transparent</item>
+    <item name="fontFamily">@font/josefin_sans</item>
+  </style>
 
-    <style name="MaterialAlertDialog.NeutralButtonStyle" parent="@style/Widget.Material3.Button.TextButton.Dialog">
-        <item name="android:textColor">@color/secondaryColor</item>
-        <item name="backgroundTint">@android:color/transparent</item>
-        <item name="fontFamily">@font/josefin_sans</item>
-    </style>
+  <style name="MaterialAlertDialog.NeutralButtonStyle" parent="@style/Widget.Material3.Button.TextButton.Dialog">
+    <item name="android:textColor">@color/secondaryColor</item>
+    <item name="backgroundTint">@android:color/transparent</item>
+    <item name="fontFamily">@font/josefin_sans</item>
+  </style>
 
-    <style name="AppTheme.FilePicker" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/primaryDarkColor</item>
-        <item name="colorPrimaryDark">@color/primaryDarkColor</item>
-        <item name="colorAccent">@color/secondaryColor</item>
-        <item name="android:statusBarColor">@color/primaryDarkColor</item>
-        <item name="android:windowBackground">@color/content_background</item>
-        <item name="android:navigationBarColor">@color/primaryDarkColor</item>
-        <!-- textColorPrimary is for toolbar title text  -->
-        <item name="android:textColorPrimary">@color/primaryTextColor</item>
-        <!-- textColorSecondary is for toolbar action icons tint-->
-        <item name="android:textColorSecondary">@color/primaryIconColor</item>
-        <item name="unicorn.colorAccent">@color/secondaryColor</item>
-        <item name="unicorn.background">@color/content_background</item>
-        <item name="unicorn.secondaryTextColor">@color/secondaryTextColor</item>
-        <item name="unicorn.primaryTextColor">@color/primaryTextColor</item>
-        <item name="unicorn.file.heading">@color/primaryTextColor</item>
-        <item name="unicorn.file.subHeading">@color/primaryTextColorLight</item>
-        <item name="unicorn.file.iconTint">@color/primaryIconColor</item>
-        <item name="unicorn.file.arrowIconTint">@color/primaryIconColor</item>
-        <item name="unicorn.file.selectionTint">@color/secondaryLightColor</item>
-        <item name="unicorn.fabColor">@color/secondaryColor</item>
-    </style>
+  <style name="AppTheme.FilePicker" parent="Theme.Material3.DayNight.NoActionBar">
+    <item name="colorPrimary">@color/primaryDarkColor</item>
+    <item name="colorPrimaryDark">@color/primaryDarkColor</item>
+    <item name="colorAccent">@color/secondaryColor</item>
+    <item name="android:statusBarColor">@color/primaryDarkColor</item>
+    <item name="android:windowBackground">@color/content_background</item>
+    <item name="android:navigationBarColor">@color/primaryDarkColor</item>
+    <!-- textColorPrimary is for toolbar title text  -->
+    <item name="android:textColorPrimary">@color/primaryTextColor</item>
+    <!-- textColorSecondary is for toolbar action icons tint-->
+    <item name="android:textColorSecondary">@color/primaryIconColor</item>
+    <item name="unicorn.colorAccent">@color/secondaryColor</item>
+    <item name="unicorn.background">@color/content_background</item>
+    <item name="unicorn.secondaryTextColor">@color/secondaryTextColor</item>
+    <item name="unicorn.primaryTextColor">@color/primaryTextColor</item>
+    <item name="unicorn.file.heading">@color/primaryTextColor</item>
+    <item name="unicorn.file.subHeading">@color/primaryTextColorLight</item>
+    <item name="unicorn.file.iconTint">@color/primaryIconColor</item>
+    <item name="unicorn.file.arrowIconTint">@color/primaryIconColor</item>
+    <item name="unicorn.file.selectionTint">@color/secondaryLightColor</item>
+    <item name="unicorn.fabColor">@color/secondaryColor</item>
+  </style>
 
-    <style name="PopupAnimation">
-        <item name="android:windowEnterAnimation">@anim/popup_in</item>
-        <item name="android:windowExitAnimation">@anim/popup_out</item>
-    </style>
+  <style name="PopupAnimation">
+    <item name="android:windowEnterAnimation">@anim/popup_in</item>
+    <item name="android:windowExitAnimation">@anim/popup_out</item>
+  </style>
 
-    <style name="AppTheme.SheetAboveKeyboard" parent="Theme.Material3.Dark.BottomSheetDialog">
-        <item name="android:windowIsFloating">false</item>
-        <item name="android:windowSoftInputMode">adjustResize</item>
-    </style>
+  <style name="AppTheme.SheetAboveKeyboard" parent="Theme.Material3.Dark.BottomSheetDialog">
+    <item name="android:windowIsFloating">false</item>
+    <item name="android:windowSoftInputMode">adjustResize</item>
+  </style>
 
-    <style name="AppTheme.TextInputLayout.Outlined" parent="Widget.Material3.TextInputLayout.OutlinedBox">
-        <item name="hintTextColor">@color/secondaryColor</item>
-        <item name="boxStrokeColor">@color/text_input_box_stroke_selector</item>
-    </style>
+  <style name="AppTheme.TextInputLayout.Outlined" parent="Widget.Material3.TextInputLayout.OutlinedBox">
+    <item name="hintTextColor">@color/secondaryColor</item>
+    <item name="boxStrokeColor">@color/text_input_box_stroke_selector</item>
+  </style>
 </resources>
