--- a/app/src/main/res/layout/wizard_details.xml
+++ b/app/src/main/res/layout/wizard_details.xml
@@ -1,160 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingStart="16dp"
-    android:paddingTop="8dp"
-    android:paddingEnd="16dp">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:paddingTop="8dp">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_app_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/project_app_name"
-        android:theme="@style/AppTheme.ProjectCreator.TextInput"
-        app:counterEnabled="true"
-        app:counterMaxLength="20"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:placeholderText="My Application"
-        app:startIconDrawable="@drawable/ic_android"
-        app:startIconTint="@color/primaryIconColor">
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/til_app_name"
+    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:hint="@string/project_app_name"
+    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    app:counterEnabled="true"
+    app:counterMaxLength="20"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:placeholderText="My Application"
+    app:startIconDrawable="@drawable/ic_android"
+    app:startIconTint="@color/primaryIconColor">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_app_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:inputType="textNoSuggestions"
-            android:singleLine="true" />
-    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputEditText
+      android:id="@+id/et_app_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:imeOptions="actionNext"
+      android:inputType="textNoSuggestions"
+      android:singleLine="true" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_package_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="@string/package_name"
-        android:theme="@style/AppTheme.ProjectCreator.TextInput"
-        app:counterEnabled="true"
-        app:counterMaxLength="40"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_app_name"
-        app:placeholderText="com.example.myapplication"
-        app:startIconDrawable="@drawable/ic_package"
-        app:startIconTint="@color/primaryIconColor">
+  </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_package_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:inputType="textNoSuggestions"
-            android:singleLine="true" />
-    </com.google.android.material.textfield.TextInputLayout>
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/til_package_name"
+    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:hint="@string/package_name"
+    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    app:counterEnabled="true"
+    app:counterMaxLength="40"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/til_app_name"
+    app:placeholderText="com.example.myapplication"
+    app:startIconDrawable="@drawable/ic_package"
+    app:startIconTint="@color/primaryIconColor">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_save_location"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="@string/wizard_save_location"
-        android:theme="@style/AppTheme.ProjectCreator.TextInput"
-        app:endIconDrawable="@drawable/ic_folder"
-        app:endIconMode="custom"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_package_name"
-        app:placeholderText="/storage/emulated/0/AppProjects/MyApplication">
+    <com.google.android.material.textfield.TextInputEditText
+      android:id="@+id/et_package_name"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:imeOptions="actionNext"
+      android:inputType="textNoSuggestions"
+      android:singleLine="true" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_save_location"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="start"
-            android:inputType="textNoSuggestions" />
-    </com.google.android.material.textfield.TextInputLayout>
+  </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_language"
-        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="@string/wizard_language"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_save_location">
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/til_save_location"
+    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:hint="@string/wizard_save_location"
+    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    app:endIconDrawable="@drawable/ic_folder"
+    app:endIconMode="custom"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/til_package_name"
+    app:placeholderText="/storage/emulated/0/AppProjects/MyApplication">
 
-        <AutoCompleteTextView
-            android:id="@+id/et_language"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="none" />
-    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputEditText
+      android:id="@+id/et_save_location"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:ellipsize="start"
+      android:inputType="textNoSuggestions" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_toolchain"
-        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="@string/wizard_toolchain"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_language">
+  </com.google.android.material.textfield.TextInputLayout>
 
-        <AutoCompleteTextView
-            android:id="@+id/et_toolchain"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="none" />
-    </com.google.android.material.textfield.TextInputLayout>
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/til_language"
+    style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
+    android:hint="@string/wizard_language"
+    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/til_save_location">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_min_sdk"
-        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="@string/minimum_sdk"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_toolchain"
-        app:startIconDrawable="@drawable/ic_min_sdk"
-        app:startIconTint="@color/primaryIconColor">
+    <AutoCompleteTextView
+      android:id="@+id/et_language"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="none" />
 
-        <AutoCompleteTextView
-            android:id="@+id/et_min_sdk"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="none" />
+  </com.google.android.material.textfield.TextInputLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/til_toolchain"
+    style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
+    android:hint="@string/wizard_toolchain"
+    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    android:visibility="gone"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/til_language">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_target_sdk"
-        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="@string/target_sdk"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_min_sdk"
-        app:startIconDrawable="@drawable/ic_target_sdk"
-        app:startIconTint="@color/primaryIconColor">
+    <AutoCompleteTextView
+      android:id="@+id/et_toolchain"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="none" />
 
-        <AutoCompleteTextView
-            android:id="@+id/et_target_sdk"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="none" />
+  </com.google.android.material.textfield.TextInputLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/til_min_sdk"
+    style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
+    android:hint="@string/minimum_sdk"
+    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/til_toolchain"
+    app:startIconDrawable="@drawable/ic_min_sdk"
+    app:startIconTint="@color/primaryIconColor">
+
+    <AutoCompleteTextView
+      android:id="@+id/et_min_sdk"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="none" />
+
+  </com.google.android.material.textfield.TextInputLayout>
+
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/til_target_sdk"
+    style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
+    android:hint="@string/target_sdk"
+    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/til_min_sdk"
+    app:startIconDrawable="@drawable/ic_target_sdk"
+    app:startIconTint="@color/primaryIconColor">
+
+    <AutoCompleteTextView
+      android:id="@+id/et_target_sdk"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="none" />
+
+  </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
