--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
     <item name="colorControlHighlight">@color/rippleHighlightColor</item>
     <item name="fontFamily">@font/josefin_sans</item>
     <item name="hintTextColor">@color/secondaryColor</item>
+    <item name="android:textCursorDrawable">@drawable/textfield_cursor</item>
     <item name="shapeAppearanceLargeComponent">@style/AppTheme.ShapeOverlay.Large</item>
     <item name="chipStyle">@style/AppTheme.UIDesigner.WidgetGroupChip</item>
     <item name="windowActionModeOverlay">true</item>
@@ -41,10 +42,11 @@
     <item name="android:textAllCaps">false</item>
   </style>
 
-  <style name="AppTheme.ProjectCreator.TextInput" parent="Widget.Material3.TextInputLayout.FilledBox.Dense">
-    <item name="colorAccent">@color/primaryTextColor</item>
-    <item name="android:textColorHint">@color/secondaryTextColor</item>
-    <item name="colorControlActivated">@color/secondaryTextColor_light</item>
+  <style name="AppTheme.ProjectCreator.TextInput" parent="">
+    <item name="colorPrimary">@color/secondaryColor</item>
+    <item name="boxStrokeColor">@color/textfield_stroke_color</item>
+    <item name="android:textColorHint">@color/textfield_label_color</item>
+    <item name="hintTextColor">@color/textfield_label_color</item>
   </style>
 
   <style name="AppTheme.ShapeOverlay.Large" parent="">
