--- a/app/src/main/res/layout/wizard_details.xml
+++ b/app/src/main/res/layout/wizard_details.xml
@@ -11,7 +11,7 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:hint="@string/project_app_name"
-    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    android:theme="@style/AppTheme.TextInputLayout"
     app:counterEnabled="true"
     app:counterMaxLength="20"
     app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:hint="@string/package_name"
-    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    android:theme="@style/AppTheme.TextInputLayout"
     app:counterEnabled="true"
     app:counterMaxLength="40"
     app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:hint="@string/wizard_save_location"
-    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    android:theme="@style/AppTheme.TextInputLayout"
     app:endIconDrawable="@drawable/ic_folder"
     app:endIconMode="custom"
     app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:hint="@string/wizard_language"
-    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    android:theme="@style/AppTheme.TextInputLayout"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/til_save_location">
@@ -111,7 +111,7 @@
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:hint="@string/wizard_toolchain"
-    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    android:theme="@style/AppTheme.TextInputLayout"
     android:visibility="gone"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -134,7 +134,7 @@
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:hint="@string/minimum_sdk"
-    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    android:theme="@style/AppTheme.TextInputLayout"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/til_toolchain"
@@ -158,7 +158,7 @@
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:hint="@string/target_sdk"
-    android:theme="@style/AppTheme.ProjectCreator.TextInput"
+    android:theme="@style/AppTheme.TextInputLayout"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/til_min_sdk"
