--- a/app/src/main/res/layout/layout_color_attr_editor.xml
+++ b/app/src/main/res/layout/layout_color_attr_editor.xml
@@ -15,64 +15,65 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:padding="16dp">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  tools:padding="16dp">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/pick_color"
-        style="@style/Widget.Material3.Button.OutlinedButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_color_picker"
-        android:textColor="@color/primaryTextColor"
-        app:icon="@drawable/ic_pick_color"
-        app:iconTint="@color/primaryIconColor"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:rippleColor="@color/secondaryColor" />
+  <com.google.android.material.button.MaterialButton
+    android:id="@+id/pick_color"
+    style="@style/Widget.Material3.Button.OutlinedButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/title_color_picker"
+    android:textColor="@color/primaryTextColor"
+    app:icon="@drawable/ic_pick_color"
+    app:iconTint="@color/primaryIconColor"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:rippleColor="@color/secondaryColor" />
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/color_preview"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/pick_color"
-        app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/primaryDarkColor"
-        app:strokeWidth="1dp" />
+  <com.google.android.material.card.MaterialCardView
+    android:id="@+id/color_preview"
+    android:layout_width="0dp"
+    android:layout_height="48dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@id/pick_color"
+    app:layout_constraintTop_toTopOf="parent"
+    app:strokeColor="@color/primaryDarkColor"
+    app:strokeWidth="1dp" />
 
-    <View
-        android:id="@+id/divider1"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_margin="16dp"
-        android:background="@color/primaryLightColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/pick_color" />
+  <View
+    android:id="@+id/divider1"
+    android:layout_width="0dp"
+    android:layout_height="1dp"
+    android:layout_margin="16dp"
+    android:background="@color/primaryLightColor"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/pick_color" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/color_res_input"
-        style="@style/AppTheme.TextInputLayout.Outlined"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="@string/hint_color_resource"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider1">
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/color_res_input"
+    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="16dp"
+    android:hint="@string/hint_color_resource"
+    android:theme="@style/AppTheme.TextInputLayout"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/divider1">
 
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:digits="abcdefghijklmnopqrstwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_/@"
-            android:padding="16dp" />
+    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+      android:layout_width="match_parent"
+      android:layout_height="56dp"
+      android:digits="abcdefghijklmnopqrstwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_/@"
+      android:padding="16dp" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+  </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
