--- a/app/src/main/res/layout/layout_create_file_java.xml
+++ b/app/src/main/res/layout/layout_create_file_java.xml
@@ -1,87 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:orientation="vertical"
+  android:paddingTop="8dp"
+  android:paddingBottom="8dp">
+
+  <HorizontalScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp">
+    android:layout_marginBottom="8dp"
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
+    <com.google.android.material.button.MaterialButtonToggleGroup
+      android:id="@+id/typeGroup"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:checkedButton="@id/type_class"
+      app:selectionRequired="true"
+      app:singleSelection="true">
+
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/type_class"
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+        android:text="@string/classtype_class"
+        android:theme="@style/AppTheme.MaterialToggleButton"
+        app:icon="@drawable/ic_language_java" />
 
-        <com.google.android.material.button.MaterialButtonToggleGroup
-            android:id="@+id/typeGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:checkedButton="@id/type_class"
-            app:selectionRequired="true"
-            app:singleSelection="true">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/type_class"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/classtype_class"
-                android:theme="@style/AppTheme.MaterialToggleButton"
-                app:icon="@drawable/ic_language_java" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/type_activity"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/classtype_activity"
-                android:theme="@style/AppTheme.MaterialToggleButton"
-                app:icon="@drawable/ic_filetype_activity" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/type_interface"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/classtype_interface"
-                android:theme="@style/AppTheme.MaterialToggleButton"
-                app:icon="@drawable/ic_filetype_interface" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/type_enum"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/classtype_enum"
-                android:theme="@style/AppTheme.MaterialToggleButton"
-                app:icon="@drawable/ic_filetype_enum" />
-
-        </com.google.android.material.button.MaterialButtonToggleGroup>
-
-    </HorizontalScrollView>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/name"
-        android:layout_width="match_parent"
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/type_activity"
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:hint="@string/file_name"
-        app:counterEnabled="true"
-        app:counterMaxLength="40"
-        app:startIconDrawable="@drawable/ic_file_rename"
-        app:startIconTint="@color/primaryIconColor">
+        android:text="@string/classtype_activity"
+        android:theme="@style/AppTheme.MaterialToggleButton"
+        app:icon="@drawable/ic_filetype_activity" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:singleLine="true" />
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/type_interface"
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/classtype_interface"
+        android:theme="@style/AppTheme.MaterialToggleButton"
+        app:icon="@drawable/ic_filetype_interface" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/type_enum"
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/classtype_enum"
+        android:theme="@style/AppTheme.MaterialToggleButton"
+        app:icon="@drawable/ic_filetype_enum" />
+
+    </com.google.android.material.button.MaterialButtonToggleGroup>
+
+  </HorizontalScrollView>
+
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/name"
+    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="@string/file_name"
+    android:theme="@style/AppTheme.TextInputLayout"
+    app:counterEnabled="true"
+    app:counterMaxLength="40"
+    app:startIconDrawable="@drawable/ic_file_rename"
+    app:startIconTint="@color/primaryIconColor">
+
+    <com.google.android.material.textfield.TextInputEditText
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:singleLine="true" />
+
+  </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
 
