--- a/app/src/main/res/layout/layout_editor_find_replace.xml
+++ b/app/src/main/res/layout/layout_editor_find_replace.xml
@@ -15,30 +15,29 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:paddingTop="8dp"
+  android:paddingBottom="8dp">
+
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/replacement_input"
+    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:paddingStart="16dp"
-    android:paddingTop="8dp"
-    android:paddingEnd="16dp"
-    android:paddingBottom="8dp">
+    android:hint="@string/msg_replacement"
+    android:theme="@style/AppTheme.TextInputLayout"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:startIconDrawable="@drawable/ic_search_replace"
+    app:startIconTint="@color/primaryIconColor">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/replacement_input"
-        style="@style/AppTheme.TextInputLayout.Outlined"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/msg_replacement"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:startIconDrawable="@drawable/ic_search_replace"
-        app:startIconTint="@color/primaryIconColor">
+    <com.google.android.material.textfield.TextInputEditText
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+  </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
