--- a/app/src/main/res/layout/layout_search_project.xml
+++ b/app/src/main/res/layout/layout_search_project.xml
@@ -1,63 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:fillViewport="true">
+
+  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:orientation="vertical"
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp">
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="24dp"
+      android:layout_marginEnd="24dp"
+      android:layout_marginBottom="8dp"
+      android:text="@string/msg_search_modules" />
 
     <LinearLayout
+      android:id="@+id/modules_container"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="24dp"
+      android:layout_marginEnd="24dp"
+      android:orientation="vertical" />
+
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/input"
+      style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      android:hint="@string/text_to_search"
+      android:theme="@style/AppTheme.TextInputLayout"
+      app:startIconDrawable="@drawable/ic_search"
+      app:startIconTint="@color/primaryIconColor">
+
+      <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingStart="16dp"
-        android:paddingTop="12dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="12dp">
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="@string/msg_search_modules" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:id="@+id/modules_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:orientation="vertical" />
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/filter"
+      style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      android:hint="@string/hint_find_project_filter"
+      android:theme="@style/AppTheme.TextInputLayout"
+      app:helperText="@string/msg_find_project_filter"
+      app:helperTextEnabled="true"
+      app:startIconDrawable="@drawable/ic_filter"
+      app:startIconTint="@color/primaryIconColor">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:hint="@string/text_to_search"
-            app:startIconDrawable="@drawable/ic_search"
-            app:startIconTint="@color/primaryIconColor">
+      <com.google.android.material.textfield.TextInputEditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/filter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_find_project_filter"
-            app:helperText="@string/msg_find_project_filter"
-            app:helperTextEnabled="true"
-            app:startIconDrawable="@drawable/ic_filter"
-            app:startIconTint="@color/primaryIconColor">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-    </LinearLayout>
+  </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
